# restfox-workspaces

./: .editorconfig  .gitignore  Brewfile  README.md  dprint.jsonc  lefthook.yml  pyproject.toml
cloudflare/: README.md  restfox.json
cloudflare/Cloudflare API 4.0.0/: _.json
confluence/: restfox.json
github/: _.plugins.json  restfox.json
honeycomb/: restfox.json
jira/: restfox.json
openai/: README.md  restfox.json
openai/OpenAI API 2.0.0/: Cancel a vector store file batch. This attempts to cancel the processing of files in this batch as ….json  Create a vector store file batch.json  Create a vector store file by attaching a [File](&#47;docs&#47;api-reference&#47;files) to a [vector store](&#47;do….json  Create a vector store.json  Delete a vector store file. This will remove the file from the vector store but the file itself wil….json  Delete a vector store.json  Modifies a vector store.json  Retrieves a vector store file batch.json  Retrieves a vector store file.json  Retrieves a vector store.json  Returns a list of vector store files in a batch.json  Returns a list of vector store files.json  Returns a list of vector stores.json  _.json
pagerduty/: restfox.json
pagerduty/PagerDuty MS Teams Integration API 1.0.0/: Create a Meeting.json
pagerduty/PagerDuty V1 Events API 2010-04-15/: _.json
pagerduty/PagerDuty V2 Events API 2.0/: Send change events to the PagerDuty Events API.json
restfox_workspace_utils/: cloudflare.py  openapi.py
sentry/: _.plugins.json  restfox.json
snyk/: README.md  restfox.json
stripe/: README.md  restfox.json
(+5107 files in other folders)
